@@ -1,0 +1,5 @@
+PACKAGE="helloworld"
+VERSION="0.1"
+DISTRO="unstable"
+URGENCY="medium"
+MAINTAINER="Artur Mustafin <funcelot@outlook.com>"
