@@ -1,5 +1,8 @@
 helloworld (0.1) unstable; urgency=medium
 
-  * Initial release.
+  * first commit
+  * added debian build pipeline
+  * updated gitpod dependencies
 
- -- Artur Mustafin <funcelot@outlook.com>  Fri, 7 Feb 2024 17:23:00 +0003
+ -- Artur Mustafin <funcelot@outlook.com>  Fri, 7 Feb 2025 16:42:12 +0000
+
